# HazelAudioCMake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  appveyor.yml
Examples/: CMakeLists.txt
Examples/Source/: HazelAL-Example.cpp
Include/HazelAudio/: HazelAudio.h  alhelpers.h
Source/: HazelAudio.cpp  alhelpers.cpp
